--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,6 @@ body{
     font-family: 'Shadows Into Light', cursive;
     color: #fff;
   }
- 
   *{
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -27,8 +26,7 @@ body{
   }
   .title_icon{
     vertical-align: middle;
-    background-position: center ;
-    
+    background-position: center;
   }
   .content{
     width: 100%;
@@ -57,14 +55,19 @@ body{
     box-shadow: 0 5px 10px rgba(0,0,0,.4);  
   }
   .titles_cifrar{
-    margin-top;0;
-      font-size: 1.5em;
-
+    font-size: 1.5em;
   }
-
+  .offset input[type="text"]{
+    outline: none;
+    border: 1px solid #0000cd;
+    height: 40px;
+    padding-left:10px; 
+  }
+  .offset input[type="text"]:focus{
+    border: 1px solid #000;
+  }
   .buttons_cipher{
     margin: 40px;
-
   }
   .resize{
     resize: none;
@@ -72,12 +75,12 @@ body{
     height: 100px;
     outline: none;
     border: 1px solid #0000cd;
+    padding-left: 10px;
   }
-  .resize:focus{
+  .resize:focus {
     border: 1px solid #000;
-
+    
   }
-
   .buttons{
     color: #fff;  
     background-color: #80dd98;
@@ -89,4 +92,11 @@ body{
     color: rgba(255, 255, 255, 1) !important;
     box-shadow: 0 4px 16px rgba(49, 138, 172, 1);
     transition: all 0.2s ease;
+  }
+
+  @media only screen and (min-width: 320px) {
+   .cifrar{
+    width: 90%;
+   } 
+    
   }
