--- a/src/style.css
+++ b/src/style.css
@@ -46,7 +46,7 @@ body{
     bottom: 0;
     left: 0;
     margin: auto;
-    max-width: 600px ;
+    width: 600px ;
     height: 620px;
     padding: 20px;
     border-radius: 5px;
@@ -94,9 +94,10 @@ body{
     transition: all 0.2s ease;
   }
 
-  @media only screen and (min-width: 320px) {
-   .cifrar{
-    width: 90%;
-   } 
-    
+  @media only screen and (min-width: 400px) {
+
+    .cifrar{
+      width: 90%;
+
+    }
   }
