--- a/src/style.css
+++ b/src/style.css
@@ -46,8 +46,8 @@ body{
     bottom: 0;
     left: 0;
     margin: auto;
-    width: 600px ;
-    height: 620px;
+    width: 500px ;
+    height: 650px;
     padding: 20px;
     border-radius: 5px;
     background: rgba(14, 59, 196, 0.8);
@@ -94,10 +94,13 @@ body{
     transition: all 0.2s ease;
   }
 
-  @media only screen and (min-width: 400px) {
-
+  @media only screen and (max-width: 400px) {
     .cifrar{
       width: 90%;
-
+    }
+  }
+  @media only screen and (max-width: 768px) {
+    .cifrar{
+      width: 90%;
     }
   }
